arangodb fixed again

--- a/apps/chatApp/src/main/resources/application.properties
+++ b/apps/chatApp/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=8081
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 spring.rabbitmq.host=localhost
-arangodb.host=localhost
-arangodb.port=8529
+#arangodb.host=localhost
+#arangodb.port=8529
 
