--- a/apps/mediaApp/src/main/resources/application.properties
+++ b/apps/mediaApp/src/main/resources/application.properties
@@ -9,5 +9,5 @@ minio.bucket.name=profile-photos
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 spring.rabbitmq.host=localhost
-arangodb.host=localhost
-arangodb.port=8529
+#arangodb.host=localhost
+#arangodb.port=8529
