--- a/apps/notificationsApp/src/main/resources/application.properties
+++ b/apps/notificationsApp/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=notifications
 spring.main.allow-bean-definition-overriding=true
 management.endpoints.web.exposure.include=*
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-arangodb.host=localhost
-arangodb.port=8529
+#arangodb.host=localhost
+#arangodb.port=8529
 
 spring.rabbitmq.host=localhost
