--- a/apps/userApp/src/main/resources/application.properties
+++ b/apps/userApp/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.datasource-sql.configuration.maximum-pool-size=10
 spring.datasource-sql.configuration.max-lifetime=30000
 spring.datasource-sql.configuration.auto-commit=false
 
-arangodb.host=localhost
-arangodb.port=8529
+#arangodb.host=localhost
+#arangodb.port=8529
 spring.rabbitmq.host=localhost
