--- a/apps/controllerApp/src/main/resources/application.properties
+++ b/apps/controllerApp/src/main/resources/application.properties
@@ -3,5 +3,5 @@ port=3006
 ssl=false
 spring.main.web-application-type=NONE
 spring.rabbitmq.host=localhost
-arangodb.host=localhost
-arangodb.port=8529
+#arangodb.host=localhost
+#arangodb.port=8529
