--- a/apps/chatApp/docker-compose.yml
+++ b/apps/chatApp/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       dockerfile: "apps/chatApp/Dockerfile"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+    command: --spring.profiles.active=docker
     #    restart: on-failure
     ports:
       - "8081:8081"
