--- a/apps/notificationsApp/Dockerfile
+++ b/apps/notificationsApp/Dockerfile
@@ -5,6 +5,7 @@ FROM maven:3.8.1-openjdk-15-slim AS build
 ENV APP_NAME=notificationsApp
 
 COPY pom.xml /M2/
+COPY apps/notificationsApp/src/main/resources/firebase-config.json /M2/
 
 WORKDIR /M2
 
@@ -20,5 +21,6 @@ FROM openjdk:15-alpine
 ENV APP_NAME=notificationsApp
 
 COPY --from=build /M2/apps/${APP_NAME}/target/${APP_NAME}-0.0.1-SNAPSHOT-exec.jar /usr/local/lib/${APP_NAME}-exec.jar
+COPY --from=build /M2/firebase-config.json /usr/local/lib/firebase-config.json
 
 ENTRYPOINT ["java", "-jar", "/usr/local/lib/notificationsApp-exec.jar"]
