Update: redis cache host in properties files

--- a/apps/userApp/src/main/resources/application-docker.properties
+++ b/apps/userApp/src/main/resources/application-docker.properties
@@ -20,3 +20,6 @@ spring.datasource-sql.configuration.auto-commit=false
 arangodb.host=arangodb
 arangodb.port=8529
 spring.rabbitmq.host=rabbitmq
+
+spring.redis.host=cache
+spring.redis.port=6379
