--- a/apps/redditApp/src/main/resources/application-docker.properties
+++ b/apps/redditApp/src/main/resources/application-docker.properties
@@ -43,7 +43,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 
-spring.redis.host=redis
+spring.redis.host=cache
 spring.redis.port=6379
 
 popular.postsUpvoteThreshold=10
