--- a/apps/mediaApp/src/main/resources/application.properties
+++ b/apps/mediaApp/src/main/resources/application.properties
@@ -6,6 +6,7 @@ minio.access.name=minioadmin
 minio.access.secret=minioadmin
 minio.url=http://127.0.0.1:9000
 minio.bucket.name=profile-photos
+download.route=http://127.0.0.1:3000/media/downloadPhoto
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 spring.rabbitmq.host=localhost
