--- a/apps/mediaApp/src/main/resources/application-docker.properties
+++ b/apps/mediaApp/src/main/resources/application-docker.properties
@@ -4,8 +4,9 @@ spring.application.name=media
 server.port=2616
 minio.access.name=minioadmin
 minio.access.secret=minioadmin
-minio.url=http://127.0.0.1:9000
+minio.url=http://minio:9000
 minio.bucket.name=profile-photos
+download.route=http://127.0.0.1:3000/media/downloadPhoto
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 spring.rabbitmq.host=rabbitmq
