--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -7,6 +7,9 @@ management.endpoints.web.exposure.include=*
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 general.environment=production
 
+arangodb.host=localhost
+arangodb.port=8529
+
 spring.rabbitmq.host=localhost
 
 postgres.host=localhost
